--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -63,7 +63,7 @@
 <body>
     <div class="signup-container">
         <h1>Signup</h1>
-        <form action="/user" method="post">
+        <form action="/user/signup" method="post">
             <input type="text" required name="name" placeholder="Full Name"/>
             <input type="email" required name="email" placeholder="Email"/>
             <input type="password" required name="password" placeholder="Password"/>
