--- a/views/login.ejs
+++ b/views/login.ejs
@@ -33,6 +33,16 @@
         button:hover {
             background-color: #0056b3;
         }
+        .signup-link {
+            margin-top: 10px;
+            display: block;
+            color: #007bff;
+            text-decoration: none;
+            font-size: 14px;
+        }
+        .signup-link:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -46,5 +56,6 @@
 
         <button type="submit">Login</button>
     </form>
+    <a href="/signup" class="signup-link">New user? Signup!</a>
 </body>
 </html>
